@@ -5,34 +5,59 @@
   <modelVersion>4.0.0</modelVersion>
 
   <name>FakeTime Parent POM</name>
-  <groupId>io.github.faketime-java</groupId>
+  <groupId>io.github.nethibernate</groupId>
   <artifactId>faketime-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0-SNAPSHOT</version>
+  <version>1.2</version>
 
   <description>
     FakeTime uses a native Java agent to replace System.currentTimeMillis() implementation with the one you can control using system properties
   </description>
-  <url>https://github.com/faketime-java/faketime</url>
+
+  <url>https://github.com/nethibernate/faketime</url>
+
   <licenses>
     <license>
       <name>MIT</name>
       <url>http://opensource.org/licenses/MIT</url>
     </license>
   </licenses>
+
   <developers>
     <developer>
       <id>mihhail-lapushkin</id>
       <name>Mihhail Lapushkin</name>
       <email>mihhail.lapushkin@gmail.com</email>
     </developer>
+    <developer>
+      <id>nethibernate</id>
+      <name>nethibernate</name>
+      <email>nethibernate@gmail.com</email>
+    </developer>
   </developers>
+
   <scm>
-    <connection>scm:git:https://github.com/faketime-java/faketime.git</connection>
-    <developerConnection>scm:git:git@github.com:faketime-java/faketime.git</developerConnection>
-    <url>https://github.com/faketime-java/faketime</url>
+    <url>https://github.com/nethibernate/faketime</url>
+    <connection>scm:git:git@github.com:nethibernate/faketime.git</connection>
+    <developerConnection>scm:git:git@github.com:nethibernate/faketime.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <issueManagement>
+    <system>Github</system>
+    <url>https://github.com/nethibernate/faketime/issues/</url>
+  </issueManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,13 +87,22 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.8</version>
+        <version>1.7.0</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
@@ -119,7 +153,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.8.0</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -136,6 +170,55 @@
                 </tag>
               </tags>
             </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <!-- Override the default release settings from the Super-POM -->
+            <configuration>
+              <!-- Suppress the default release profile from Maven Super-POM -->
+              <useReleaseProfile>false</useReleaseProfile>
+              <!-- Release profile that will be activated by release:perform -->
+              <releaseProfiles>release</releaseProfiles>
+              <!-- Not used in this project, but included for completeness -->
+              <autoVersionSubmodules>true</autoVersionSubmodules>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.7.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
